[package]
name = "monotonic-timer"
version = "1.0.0"
authors = ["Adam Baxter", "David Teller <yoric@rajtel.name>"]
description = "A simple monotonic timer. Use it to schedule execution of closures after a delay."
repository = "https://github.com/ambaxter/monotonic_timer.rs.git"
readme = "README.md"
keywords = ["timer", "alarm", "schedule", "chrono", "chronometer"]
license = "MPL-2.0"
edition = "2021"

